[package]
name = "bluesky-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
atrium-api = { version = "0.24.8" }
cid_old = { package = "cid", version = "0.10.1" }
cid = { package = "cid", version = "0.11.1" }
futures = "0.3.30"
ipld-core = { version = "0.4.1", default-features = false, features = ["std"] }
rs-car = "0.4.1"
serde_ipld_dagcbor = { version = "0.6.0", default-features = false, features = ["std"]}
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
serde_json = "1.0.133"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
locale-codes = "0.3.0"
dotenv = "0.15"
rdkafka = "0.37.0"
lazy_static = "1.5.0"
prometheus = "0.13.4"
log = "0.4.22"
env_logger = "0.11.5"